--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                 </form>
 
                 <div class="footer__copy mt-6">
-                    <p>© 2019. All rights reserved. Buy Kallyas Wordpress Theme.</p>
+                    <p>Made With ❤ By Mainul Islam</p>
                 </div>
             </div>
         </div>
